--- a/template.yaml
+++ b/template.yaml
@@ -15,7 +15,7 @@ Resources:
         - arn:aws:lambda:us-east-1:891956057524:layer:s3-dependencies:2
       Environment:
         Variables:
-          GET_METADATA_HOST: '{{resolve:ssm:GET_METADATA_HOST:1}'
+          GET_METADATA_HOST: '{{resolve:ssm:GET_METADATA_HOST:1}}'
           IDEALFEEDS_KEY: '{{resolve:ssm:IDEALFEEDS_KEY:1}}'
       Events:
         photos:
