--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -11,6 +11,7 @@ phases:
     commands:
       - rm -f package-lock.json
       - export BUCKET=$DIGIGALLERY_BUILD_BUCKET_NAME
+      - aws cloudformation build
       - aws cloudformation package --template-file template.yaml --output-template-file outputtemplate.yaml --s3-bucket $BUCKET --s3-prefix digigallery-metadata
 artifacts:
   type: zip
