dependency resolution fix

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -6,12 +6,15 @@ env:
 phases:
   install:
     runtime-versions:
-        nodejs: 12
-  build:
+        nodejs: 10
+  pre_build:
     commands:
       - rm -f package-lock.json
+      - npm install
+  build:
+    commands:      
       - export BUCKET=$DIGIGALLERY_BUILD_BUCKET_NAME
-      - npm run build
+      - npm run lint
       - aws cloudformation package --template-file template.yaml --output-template-file outputtemplate.yaml --s3-bucket $BUCKET --s3-prefix digigallery-metadata
 artifacts:
   type: zip
