--- a/template.yaml
+++ b/template.yaml
@@ -10,11 +10,10 @@ Resources:
       Runtime: nodejs10.x
       Timeout: 60
       CodeUri: ./
-      Role: !GetAtt getAdsFnRole.Arn
+      Role: !GetAtt getAdsFnRoleV2.Arn
       Tracing: Active
       Layers:
         - arn:aws:lambda:us-east-1:891956057524:layer:s3-dependencies:2
-        - !Ref xrayWriteRole
       Environment:
         Variables:
           GET_METADATA_HOST: '{{resolve:ssm:GET_METADATA_HOST:1}}'
@@ -39,7 +38,7 @@ Resources:
       TracingEnabled: true
       Cors:
         AllowOrigin: "'*'"
-  getAdsFnRole:
+  getAdsFnRoleV2:
     Type: AWS::IAM::Role
     Properties:
       ManagedPolicyArns:
@@ -53,17 +52,7 @@ Resources:
               - 'lambda.amazonaws.com'
             Action: 
               - 'sts:AssumeRole'
-  xrayWriteRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-        - Action: "sts:AssumeRole"
-          Principal:
-            Service: lambda.amazonaws.com
-          Effect: Allow
-      Policies:
+     Policies:
       - PolicyName: demo-xray-lambda-policy
         PolicyDocument:
           Version: "2012-10-17"
