--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:      
       - export BUCKET=$DIGIGALLERY_BUILD_BUCKET_NAME
-      - aws cloudformation package --template-file template.yaml --output-template-file outputtemplate.yaml --s3-bucket $BUCKET --s3-prefix digigallery-metadata
+      - aws cloudformation package --template-file template.yaml --output-template-file outputtemplate.yaml --s3-bucket $BUCKET --s3-prefix digigallery-ad
 artifacts:
   type: zip
   files:
