--- a/template.yaml
+++ b/template.yaml
@@ -70,6 +70,11 @@ Resources:
                       type: "string"
                     Access-Control-Allow-Methods:
                       type: "string"
+              x-amazon-apigateway-integration:
+                httpMethod: post
+                type: aws_proxy
+                uri:
+                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${getAds.Arn}/invocations
   getAdsFnRoleV2:
     Type: AWS::IAM::Role
     Properties:
